# benchlab

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
benchlab/: __init__.py  cli.py  config.py  models.py
benchlab/api/: app.py  dependencies.py
benchlab/api/routers/: batches.py  health.py  metrics.py  models.py  prompts.py  runs.py
benchlab/api/schemas/: requests.py  responses.py
benchlab/evaluation/: agreement.py  evaluator.py  rubric.py  templates.py
benchlab/prompts/: loader.py  schema.py
benchlab/runner/: batch.py  metrics.py  ollama_client.py
benchlab/storage/: elasticsearch.py  mappings.py
config/: benchlab.example.yaml  benchlab.yaml
docker/: api.Dockerfile
docker/ollama/: entrypoint.sh
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Card.tsx  Layout.tsx  ScoreBar.tsx  StatCard.tsx
frontend/src/hooks/: use-batches.ts  use-metrics.ts  use-models.ts  use-ollama.ts  use-runs.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: BatchDetail.tsx  Dashboard.tsx  Leaderboard.tsx  ModelComparison.tsx  OllamaModels.tsx  PromptDetail.tsx  PromptsList.tsx  ResultDetail.tsx  StartRun.tsx
prompts/examples/: coding.json  creative.json  hard-coding.json  hard-knowledge.json  hard-reasoning.json  reasoning.json
